@@ -2,7 +2,6 @@ package pro.taskana.common.internal.util;
 
 import java.util.List;
 import java.util.ServiceLoader;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 public class SpiLoader {
@@ -13,6 +12,6 @@ public class SpiLoader {
 
   public static <T> List<T> load(Class<T> clazz) {
     ServiceLoader<T> serviceLoader = ServiceLoader.load(clazz);
-    return StreamSupport.stream(serviceLoader.spliterator(), false).collect(Collectors.toList());
+    return StreamSupport.stream(serviceLoader.spliterator(), false).toList();
   }
 }
